# picofabric-c

./: CHANGELOG.md  LICENSE  README.md
sw/pico/: CMakeLists.txt  dev_env.win32.cmd
sw/pico/projects/fabric_bootloader/: CMakeLists.txt  fabric_bootloader.c  fabric_bootloader.h
sw/pico/projects/libfabric/: CMakeLists.txt  libfabric.c  libfabric.h
sw/pico/projects/programing_example/: CMakeLists.txt  bitstream.bit.h  main.c
sw/programmer/: fabric_bootloader.uf2  program.py
tools/: headerembed.py
